# MicmacCluster

./: .gitignore  CMakeLists.txt  README.md  README.txt
data/: clean.sh  mm3d-LogFile.txt
data/Pastis/: Resol27_Teta0_DJI_0008.tif  Resol68_Teta0_DJI_0008.tif
data/Tmp-MM-Dir/: DJI_0008.JPG-MDT-4227.dmp  DJI_0008.JPG-MDT-4227.xml
src/: clusterizer.cpp  clusterizer.hpp
src/clusterize/: clusterize.cpp  clusterize.hpp
src/exec_cmd/: exec_cmd.cpp  exec_cmd.hpp
src/file_manager/: file_manager.cpp  file_manager.hpp
src/opt_parser/: opt_parser.cpp  opt_parser.hpp
src/parser/: parser.cpp  parser.hpp
